# stx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  circle.yml  configuration.rb  stx.sln
stx/: delegate.hpp  id.hpp  packages.config  test.cpp  type_traits.hpp
stx/filesystem/: filesystem.cpp  monitor.hpp
stx/filesystem/dir_monitor/: basic_dir_monitor.hpp
stx/filesystem/dir_monitor/inotify/: basic_dir_monitor_service.hpp  dir_monitor_impl.hpp
stx/filesystem/dir_monitor/kqueue/: basic_dir_monitor_service.hpp  dir_monitor_impl.hpp
stx/filesystem/dir_monitor/windows/: basic_dir_monitor_service.hpp  dir_monitor_impl.hpp
stx/preprocessor/: macro.h
stx/thread/: thread_bundle.hpp
stx/type_traits/: configuration.hpp  if_type.hpp  integral_condition.hpp  os.hpp
stx/util/: flexcode.hpp  logger.cpp  safe_release.hpp  singleton.hpp  stacktrace.hpp
stx_old/: config.hpp  string.hpp  stx.vcxproj  stx.vcxproj.filters  tstring_symbol.hpp  types.h
stx_old/filesystem/: filesystem.hpp
stx_old/filesystem/dir_monitor/: dir_monitor.hpp
stx_old/filesystem/dir_monitor/fsevents/: basic_dir_monitor_service.hpp  dir_monitor_impl.hpp
stx_old/mpl/: mpl.hpp
stx_old/type_traits/: function_traits.hpp  lambda_traits.hpp  union_cast.hpp
stx_old/util/: auto_link.hpp  config.hpp  console.cpp  console.hpp  flexcode.cpp  logger.hpp  stacktrace.cpp
test/: CMakeLists.txt  test.cpp
